# python-source-builds

./: .gitignore  .mise.toml  .prettierignore  CNAME  CONTRIBUTING.rst  Makefile  README.md  __init__.py  nixpacks.toml  package-lock.json  package.json  prettier.config.js  pyproject.toml  railway.json  requirements.txt  tailwind.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.yaml  config.yml
.github/workflows/: cd.yml  docs.yml
app/: __init__.py  __main__.py  __metadata__.py  asgi.py  utils.py
app/applets/: __init__.py
app/applets/core/: __init__.py  controller.py  helpers.py  schemas.py
app/applets/core/public/: scalar.css  styles.css
app/applets/core/templates/: index.html
app/applets/core/templates/partials/: highlighted_script.html  script.html
app/applets/core/utils/: __init__.py
app/config/: __init__.py  app.py  routes.py  settings.py
docs/: changelog.rst  conf.py  index.rst
docs/_static/: custom.css
docs/web/api/: index.rst
docs/web/api/config/: app.rst
docs/web/api/core/: controller.rst  helpers.rst  index.rst
docs/web/usage/: server.rst
latest/: .buildinfo  changelog.html  contribution-guide.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_modules/app/: asgi.html  utils.html
latest/_modules/app/applets/core/: controller.html  helpers.html  schemas.html
latest/_modules/app/config/: settings.html
latest/_modules/litestar/contrib/: jinja.html
latest/_sources/: changelog.rst.txt
latest/_sources/web/api/: metadata.rst.txt
latest/_sources/web/api/config/: index.rst.txt  routes.rst.txt  settings.rst.txt
latest/_sources/web/api/core/: schemas.rst.txt
latest/web/api/: app.html  index.html  metadata.html  utils.html
latest/web/api/config/: app.html  index.html  routes.html  settings.html
latest/web/api/core/: controller.html  helpers.html  index.html  schemas.html
latest/web/usage/: index.html  server.html  starting.html
tests/: test_pass.py
